feat: 문제 4개 해결

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
-
     implementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    implementation 'org.junit.jupiter:junit-jupiter-params:5.6.0'
+    implementation 'org.assertj:assertj-core:3.18.1'
     runtimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
